--- a/movie_recommendation_system.Rmd
+++ b/movie_recommendation_system.Rmd
@@ -32,12 +32,125 @@ rating_data <- read.csv("ratings.csv")
 str(movie_data)
 ```
 
-#### 2.1 Checking the data
-
+#### 2.1. Checking the movie_data
 ```{r}
 summary(movie_data)
 ```
 ```{r}
 head(movie_data)
+```
+#### 2.2. Checking the rating_data
+```{r}
+summary(rating_data)
+```
+```{r}
+head(rating_data)
+```
+### 3. Data Pre-processing
+From the above table, we observe that the userId column, as well as the movieId column, consist of integers. Furthermore, we need to convert the genres present in the movie_data dataframe into a more usable format by the users. In order to do so, we will first create a one-hot encoding to create a matrix that comprises of corresponding genres for each of the films.
+
+```{r}
+movie_genre <- as.data.frame(movie_data$genres, stringsAsFactors = FALSE)
+library(data.table)
+
+movie_genre2 <- as.data.frame(tstrsplit(movie_genre[,1], '[|]', type.convert = TRUE), stringsAsFactors = FALSE)
+
+colnames(movie_genre2) <- c(1:10)
+
+list_genre <- c("Action", "Adventure", "Animation", "Children", "Comedy", "Crime","Documentary", "Drama", "Fantasy", "Film-Noir", "Horror", "Musical", "Mystery","Romance", "Sci-Fi", "Thriller", "War", "Western")
+
+genre_mat1 <- matrix(0, 10330, 18)
+genre_mat1[1,] <- list_genre
+colnames(genre_mat1) <- list_genre
+
+for (index in 1:nrow(movie_genre2)) {
+  for (col in 1:ncol(movie_genre2)) {
+    gen_col = which(genre_mat1[1,] == movie_genre2[index, col])
+    genre_mat1[index+1, gen_col] <- 1
+  }
+}
+
+genre_mat2 <- as.data.frame(genre_mat1[-1,], stringsAsFactors = FALSE)
+
+for (col in 1:ncol(genre_mat2)) {
+  genre_mat2[,col] <-  as.integer(genre_mat2[,col])
+}
+
+str(genre_mat2)
+```
+#### 3.1. Creating a Search Matrix 
+```{r}
+SearchMatrix <- cbind(movie_data[,1:2], genre_mat2[])
+head(SearchMatrix)
+```
+#### 3.2. Creating a sparse matrix
+```{r}
+ratingMatrix <- dcast(rating_data, userId~movieId, value.var = "rating", na.rm=FALSE)
+ratingMatrix <- as.matrix(ratingMatrix[,-1])
+
+ratingMatrix <- as(ratingMatrix, "realRatingMatrix")
+ratingMatrix
+```
+
+```{r}
+recommendation_model <- recommenderRegistry$get_entries(dataType = "realRatingMatrix")
+names(recommendation_model)
+```
+```{r}
+lapply(recommendation_model, "[[", "description")
+```
+```{r}
+recommendation_model$IBCF_realRatingMatrix$parameters
+```
+### 4. Exploring Similar Data
+Collaborative Filtering involves suggesting movies to the users that are based on collecting preferences from many other users. For example, if a user A likes to watch action films and so does user B, then the movies that the user B will watch in the future will be recommended to A and vice-versa. Therefore, recommending movies is dependent on creating a relationship of similarity between the two users. With the help of recommenderlab, we can compute similarities using various operators like cosine, pearson as well as jaccard.
+```{r}
+similarity_mat <- similarity(ratingMatrix[1:4, ], method = "cosine", which = "users")
+as.matrix(similarity_mat)
+
+image(as.matrix(similarity_mat), main = "User's Similarities")
+```
+In the above matrix, each row and column represents a user. We have taken four users and each cell in this matrix represents the similarity that is shared between the two users.
+
+Now, we delineate the similarity that is shared between the films:
+
+```{r}
+movie_similarity <- similarity(ratingMatrix[, 1:4], method = "cosine", which = "items")
+as.matrix(movie_similarity)
+
+image(as.matrix(movie_similarity), main = "Movies similarity")
+```
+#### 4.1. Extracting the unique ratings
+```{r}
+rating_values <- as.vector(ratingMatrix@data)
+unique(rating_values)
+```
+#### 4.2. Table with most unique ratings
+```{r}
+Table_of_Ratings <- table(rating_values)
+Table_of_Ratings
+```
+### 5. Most viewed movies visualization
+```{r}
+library(ggplot2)
+movie_views <- colCounts(ratingMatrix)
+table_views <- data.frame(movie = names(movie_views), views = movie_views)
+
+table_views <- table_views[order(table_views$views, decreasing = TRUE), ]
+table_views$title <- NA
+
+for (index in 1:10325) {
+  table_views[index, 3] <- as.character(subset(movie_data, movie_data$movieId == table_views[index, 1])$title)
+}
+table_views[1:6,]
+```
+#### 5.1. Visualize a bar plot for the total number of views of the top films
+```{r}
+ggplot(table_views[1:6, ], aes(x = title, y = views)) +
+  geom_bar(stat="identity", fill = 'steelblue') +
+  geom_text(aes(label=views), vjust=-0.3, size=3.5) +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
+
+  ggtitle("Total Views of the Top Films")
 ```
 
