--- a/movie_recommendation_system.Rmd
+++ b/movie_recommendation_system.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Movie Recommendation System"
 author: "Aviparna Biswas"
+date: "28-05-2022"
 output: html_notebook
 ---
 
@@ -152,5 +153,115 @@ ggplot(table_views[1:6, ], aes(x = title, y = views)) +
   theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
 
   ggtitle("Total Views of the Top Films")
+```
+### 6. Heatmap of Movie Ratings
+```{r}
+image(ratingMatrix[1:20, 1:25], axes = FALSE, main = "Heatmap of the first 25 rows and 25 columns")
+```
+### 7. Performing Data Preparation
+
+#### 7.1. Selecting the useful data
+For finding useful data in our dataset, we have set the threshold for the minimum number of users who have rated a film as 50. This is also same for minimum number of views that are per film. This way, we have filtered a list of watched films from least-watched ones.
+```{r}
+movie_ratings <- ratingMatrix[rowCounts(ratingMatrix) > 50, colCounts(ratingMatrix) > 50]
+
+movie_ratings
+```
+From the above output of ‘movie_ratings’, we observe that there are 420 users and 447 films as opposed to the previous 668 users and 10325 films. We can now delineate our matrix of relevant users as follows:
+```{r}
+minimum_movies<- quantile(rowCounts(movie_ratings), 0.98)
+minimum_users <- quantile(colCounts(movie_ratings), 0.98)
+image(movie_ratings[rowCounts(movie_ratings) > minimum_movies,
+                     colCounts(movie_ratings) > minimum_users],
+main = "Heatmap of the top users and movies")
+```
+Now, we will visualize the distribution of the average ratings per user.
+```{r}
+average_ratings <- rowMeans(movie_ratings)
+qplot(average_ratings, fill=I("steelblue"), col=I("red")) +
+  ggtitle("Distribution of the average rating per user")
+```
+#### 7.2. Data Normalization
+Normalization is a data preparation procedure to standardize the numerical values in a column to a common scale value. This is done in such a way that there is no distortion in the range of values. Normalization transforms the average value of our ratings column to 0. We then plot a heatmap that delineates our normalized ratings.
+```{r}
+normalized_ratings <- normalize(movie_ratings)
+sum(rowMeans(normalized_ratings) > 0.0001)
+
+image(normalized_ratings[rowCounts(normalized_ratings) > minimum_movies, colCounts(normalized_ratings) > minimum_users], main = "Normalized Ratings of the Top Users")
+```
+#### 7.3. Data Binarization
+Binarizing the data means that we have two discrete values 1 and 0, which will allow our recommendation systems to work more efficiently. We will define a matrix that will consist of 1 if the rating is above 3 and otherwise it will be 0.
+```{r}
+binary_minimum_movies <- quantile(rowCounts(movie_ratings), 0.95)
+binary_minimum_users <- quantile(colCounts(movie_ratings), 0.95)
+#movies_watched <- binarize(movie_ratings, minRating = 1)
+
+good_rated_films <- binarize(movie_ratings, minRating = 3)
+image(good_rated_films[rowCounts(movie_ratings) > binary_minimum_movies,
+colCounts(movie_ratings) > binary_minimum_users],
+main = "Heatmap of the top users and movies")
+```
+### 8. Collaborative Filtering System
+The collaborative filtering finds similarity in the items based on the people’s ratings of them. The algorithm first builds a similar-items table of the customers who have purchased them into a combination of similar items. This is then fed into the recommendation system.
+```{r}
+sampled_data<- sample(x = c(TRUE, FALSE),
+                      size = nrow(movie_ratings),
+                      replace = TRUE,
+                      prob = c(0.8, 0.2))
+training_data <- movie_ratings[sampled_data, ]
+testing_data <- movie_ratings[!sampled_data, ]
+```
+### 9. Building the Recommendation System
+We will now explore the various parameters of our Item Based Collaborative Filter. These parameters are default in nature. In the first step, k denotes the number of items for computing their similarities. Here, k is equal to 30. Therefore, the algorithm will now identify the k most similar items and store their number. We use the cosine method which is the default one but you can also use pearson method.
+```{r}
+recommendation_system <- recommenderRegistry$get_entries(dataType ="realRatingMatrix")
+recommendation_system$IBCF_realRatingMatrix$parameters
+```
+```{r}
+recommen_model <- Recommender(data = training_data,
+                          method = "IBCF",
+                          parameter = list(k = 30))
+recommen_model
+class(recommen_model)
+```
+```{r}
+model_info <- getModel(recommen_model)
+class(model_info$sim)
+dim(model_info$sim)
+top_items <- 20
+image(model_info$sim[1:top_items, 1:top_items],
+   main = "Heatmap of the first rows and columns")
+```
+```{r}
+sum_rows <- rowSums(model_info$sim > 0)
+table(sum_rows)
+
+sum_cols <- colSums(model_info$sim > 0)
+qplot(sum_cols, fill=I("steelblue"), col=I("red"))+ ggtitle("Distribution of the column count")
+```
+### 10. Recommender System on the dataset
+We will create a top_recommendations variable which will be initialized to 10, specifying the number of films to each user. We will then use the predict() function that will identify similar items and will rank them appropriately. Here, each rating is used as a weight. Each weight is multiplied with related similarities. Finally, everything is added in the end.
+```{r}
+top_recommendations <- 10 # the number of items to recommend to each user
+predicted_recommendations <- predict(object = recommen_model,
+                          newdata = testing_data,
+                          n = top_recommendations)
+predicted_recommendations
+```
+```{r}
+user1 <- predicted_recommendations@items[[1]] # recommendation for the first user
+movies_user1 <- predicted_recommendations@itemLabels[user1]
+movies_user2 <- movies_user1
+for (index in 1:10){
+  movies_user2[index] <- as.character(subset(movie_data,
+                                         movie_data$movieId == movies_user1[index])$title)
+}
+movies_user2
+```
+```{r}
+recommendation_matrix <- sapply(predicted_recommendations@items,
+                      function(x){ as.integer(colnames(movie_ratings)[x]) }) # matrix with the recommendations for each user
+#dim(recc_matrix)
+recommendation_matrix[,1:4]
 ```
 
